src/scss/components/_hero.scss
.hero {
    background: no-repeat center center;
    background-size: cover;
    color: white;
    display: block;
    margin-bottom: $line-height;
    padding: 0;
    position: relative;
    text-shadow: 0 1px 0 rgba(black, 0.5);
    z-index: 1;

    @include resp-min($screen-md-min) {
        padding: ($line-height * 2) 0 $line-height;
    }
}

    .hero__cta,
    .hero__body {
        bottom: 0;
        left: 0;
        padding: $line-height;
        position: absolute;
        right: 0;

        @include resp-min($screen-md-min) {
            padding: ($line-height * 2);
        }
    }

    .hero__body {
        background-color: rgba(black, 0.5);
        top: 0;

        @include resp-min($screen-md-min) {
            background-color: transparent;
        }

        ul {
            margin-left: 0;
            list-style: none;

            @include resp-min($screen-md-min) {
                margin-top: ($line-height * 2.5);
            }

            > li:not(:last-child) {
                margin-bottom: $line-height;

                @include resp-min($screen-md-min) {
                    margin-bottom: ($line-height * 2);
                }
            }
        }
    }

    .hero__cta {
        padding: 0;
        position: relative;

        @include resp-min($screen-md-min) {
            padding: ($line-height * 2);
            position: absolute;
        }
    }

    .hero__title {
        font-size: $font-size-mega;
        line-height: $font-size-mega * $line-height-base;

        @include resp-min($screen-sm-min) {
            margin-bottom: ($line-height / 2);
        }
    }

    .hero__sub-title {
        font-size: $font-size-kilo;
    }

.hero--primary {
    .hero__title {
        font-size: $font-size-giga;
    }

    .hero__body,
    .hero__cta {
        @include resp-min($screen-sm-min) {
            padding: ($line-height * 2);
        }
    }
}

.hero--dark {
    @include resp-min($screen-sm-min) {
        color: $super-dark-grey;
        text-shadow: 0 1px 0 rgba(white, 0.5);
    }
}

